GWT: fix IntelliJ inspection warnings (safe cleanups and latent NPEs)
Resolve actionable inspection warnings surfaced by the IDE:

Correctness / latent NPEs:
- GwtUiFieldFromAttributeReference#findUiBinderClasses returned null from a
  @NotNull method; return an empty list instead
- GwtTagWidgetReference#bindToElement guarded against a null qualified name
  (PsiClass#getQualifiedName may be null) before deriving the package
- UiXmlTagNameRefactoringUtil guarded against a null root tag before
  setAttribute

Simplifications / cleanups:
- collapse redundant if/return chains in the RPC searchers and equals()
  bodies (GwtAsyncMethodSearcher, GwtAsyncServiceClassInheritorSearcher,
  GwtOverridingServiceMethodsSearcher, GwtSourcePath, GwtPropertyDescriptor)
- drop the always-null "suffix" parameter of GwtGradleSdkPaths.getArtifactPath
- pattern variable in GwtTagWidgetReference; @NotNull on the overriding
  GwtCssParserDefinition#createParser parameter; List#getFirst() in
  UiXmlFileRenameHandler and GwtRenameTest; remove an unused test variable

Remaining warnings are intentional: @ApiStatus.Internal/Experimental
platform build APIs with no stable alternative, and deprecated types
(CssPropertyValue) whose replacements are not present in platform 2026.2.

Verified with compileJava, compileTestJava, buildPlugin and the IDE's
lint_files (no actionable warnings left in the touched files).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>